<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvVende"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/descripcion"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="viewEnd">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="89dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtNomVen"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imvVende"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtNomVen"
                        android:layout_width="233dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="Daniel Avalos Alvarez"
                        android:textColor="@color/colorSecundaryText"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/phone"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/txtEmailVen"
                        app:layout_constraintEnd_toStartOf="@+id/txtTelVen"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imvVende"
                        app:layout_constraintTop_toBottomOf="@+id/txtNomVen" />

                    <TextView
                        android:id="@+id/txtTelVen"
                        android:layout_width="233dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="6121176879"
                        android:textAlignment="viewStart"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtEmailVen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/txtNomVen" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>