<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvPro"
                android:layout_width="93dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/alert_dark_frame" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtNombreLP"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="TextView"
                        android:textColor="@color/colorSecundaryText"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/descripcion2"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDescripLP"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="TextView"
                        android:textColor="@color/colorSecundaryText"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/precio"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPrecioLP"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="TextView"
                        android:textColor="@color/colorSecundaryText"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/disponibles"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDisLP"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="TextView"
                        android:textColor="@color/colorSecundaryText"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp">

                        <TextView
                            android:id="@+id/txtSubtotal"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@+id/txtSubtotal2"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text="Subtotal"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtSubtotal2"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginEnd="103dp"
                            android:layout_weight="1"
                            android:text="Subtotal"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtSubtotal3"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_weight="1"
                            android:text="Ordenar"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
                            android:id="@+id/number_picker_horizontal"
                            android:layout_width="74dp"
                            android:layout_height="34dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="35dp"
                            android:paddingEnd="8dp"
                            android:paddingStart="8dp"
                            app:snp_maxValue="100"
                            app:snp_minValue="1"
                            app:snp_orientation="horizontal"
                            app:snp_stepSize="1"
                            app:snp_updateInterval="100"
                            app:snp_value="10" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>